skeleton of theory-eldyn-continuous

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,6 +11,11 @@
 %%   of the thesis
 %     --> hyperbolic Metamaterial theory implications in other fields of physics: eldyn in ultra-high magnetic field: Smolyaninov2011 
 
+%% """ If a too-simplistic physical theory is forced to predict or explain data that are not within its scope,
+%%     it can often do so, but without giving any physical insight. Such a result is not a proof of the theory to be
+%%     applicable to the problem, and in some cases not even of the theory to make any sense whatsoever."""
+
+
 We presented experimental and theoretical studies of simple periodic structures -- the periodic arrays of dielectric slabs, two orientations of rods, dielectric spheres, metallic wire mesh, as well as a composite of spheres and a mesh. An attempt was made to make an analysis of the modes that are responsible for the photonic bands, illustrating different electromagnetic phenomena and their dependence on a structure parameter. An analytic model for wire medium was proven to match our numerical results.
 The prospects for the future work are to broaden this catalogue to other structures in order to enable comparison and deeper physical interpretation of their behaviour. 
 
