--- a/fdphd.bib
+++ b/fdphd.bib
@@ -819,6 +819,16 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2000},
   publisher={Optical Society of America}
 }
+@article{brown1991oscillations,
+  title={Oscillations up to 712 GHz in InAs/AlSb resonant-tunneling diodes},
+  author={Brown, ER and S{\"o}derstr{\"o}m, JR and Parker, CD and Mahoney, LJ and Molvar, KM and McGill, TC},
+  journal={Applied Physics Letters},
+  volume={58},
+  number={20},
+  pages={2291--2293},
+  year={1991},
+  publisher={AIP Publishing}
+}
 /*}}}*/
 
 % == Simulations ==
